Сделал 3 задание 3 практики

--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -4,3 +4,8 @@ scrapper:
 springdoc:
   swagger-ui:
     path: "/swagger-ui"
+
+client:
+  base-url:
+    github: "https://api.github.com"
+    stackoverflow: "https://api.stackexchange.com/2.3"
