--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -56,6 +56,10 @@
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
