--- a/link-parser/pom.xml
+++ b/link-parser/pom.xml
@@ -74,6 +74,17 @@
           <target>17</target>
         </configuration>
       </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+          </plugin>
+
     </plugins>
   </build>
 </project>
