--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <spring-boot.version>3.0.1</spring-boot.version>
     <springdoc.version>2.0.2</springdoc.version>
     <telegrambots.version>6.5.0</telegrambots.version>
+    <maven-failsafe-plugin.version>3.0.0</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -149,6 +151,19 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
