--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -60,6 +60,12 @@
       <groupId>org.telegram</groupId>
       <artifactId>telegrambots</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -125,6 +131,7 @@
           <target>16</target>
         </configuration>
       </plugin>
+
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
