--- a/link-parser/pom.xml
+++ b/link-parser/pom.xml
@@ -19,6 +19,12 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+    </dependency>
+  </dependencies>
 
 
   <build>
