--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
     <liquibase-core.version>4.20.0</liquibase-core.version>
     <postgresql.version>42.6.0</postgresql.version>
+    <testcontainers.version>1.17.6</testcontainers.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -70,6 +71,14 @@
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${postgresql.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${testcontainers.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
 
     </dependencies>
