6 практика: исправил тесты и репозитории, реализовал сервисы и интрегрировал их в контроллеры

--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -11,3 +11,12 @@ client:
   base-url:
     github: "https://api.github.com"
     stackoverflow: "https://api.stackexchange.com/2.3"
+
+spring:
+  liquibase:
+    enabled: false
+  datasource:
+    url: ${PG_URL}
+    username: ${PG_USERNAME}
+    password: ${PG_PASSWORD}
+    driverClassName: org.postgresql.Driver
