--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -20,3 +20,6 @@ spring:
     username: ${PG_USERNAME}
     password: ${PG_PASSWORD}
     driverClassName: org.postgresql.Driver
+
+
+  database-access-type: jpa
