--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -2,6 +2,8 @@ bot:
   test: "Helloworld!!"
   username: "Fobiak_bot"
   token: ${TOKEN}
+  exchange: "message"
+  queue: "message.queue"
 
 springdoc:
   swagger-ui:
