--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 scrapper:
   test: hi
   scheduler:
-    interval: 5000
+  interval: 5000
+  exchange: "message"
+  queue: "message.queue"
 
 springdoc:
   swagger-ui:
